Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -20,7 +20,7 @@
         \textcite{gessell2021} showed that \blindtext
     }
     \block{Methods}{
-        We used a new method for testing this hypothesis \cite{oneill2021}. \blindtext
+        We used a new method for testing this hypothesis \parencite{oneill2021}. \blindtext
     }
     \block{References}{
         \begin{center}\mbox{}\vspace{-\baselineskip}
