--- a/main.tex
+++ b/main.tex
@@ -2,13 +2,14 @@
 
 \usepackage{IMCLab}                                 %% for pretty fonts/colors
 \usepackage[style=apa,backend=biber]{biblatex}      %% for APA citation
+\usepackage{anyfontsize}                            %% for font sizes
 \usepackage{blindtext}                              %% for filler text- delete this line
 
 \addbibresource{references.bib}                         %% import bibliography file
 
 
 \begin{document}
-\title{Poster Title}
+\title{\fontsize{100}{120}\textbf{Poster Title}}
 \author{Author One, Author Two, Felipe De Brigard}
 \date{\today}
 \institute{Duke University}
